# leopard-gecko

./: .env.example  .gitignore  pyproject.toml  readme-kr.md  readme.md  readme_en.md  test-prompt.txt
assets/: routing-animation.html
docs/: implementation-plan.md  init.md  plan-01-transactional-task-persistence.md  plan-02-run-recovery.md  plan-03-global-queue-session-promotion.md  plan-04-poll-worker-loop.md  plan-05-task-indexing-and-output-caching.md  plan-06-session-worktrees.md  technical-spec.md
docs/patch-needed/: README.md  dispatch-failure-rollback.md  global-queue-autopromotion-rfc.md  poll-io-reduction-matrix.md  router-availability-adr.md  session-timeout-lifecycle-faq.md  task-snapshot-sync-phases.md
leopard-test/: message.html  script.js  second-page.html  styles.css  test-success.html
src/leopard_gecko/: __init__.py
src/leopard_gecko/adapters/: __init__.py  base.py  codex.py  factory.py  noop.py
src/leopard_gecko/cli/: main.py
src/leopard_gecko/models/: __init__.py  config.py  session.py  task.py
src/leopard_gecko/orchestrator/: __init__.py  pipeline.py  worker_loop.py
src/leopard_gecko/router/: __init__.py  agent.py  (+4 more)
tests/: test_cli.py  test_e2e_agent_router.py  test_e2e_cli_workflow.py  test_e2e_codex_worker.py  test_e2e_openai_codex_multi_session.py  test_models.py  test_pipeline.py  test_router.py  test_routing_viz.py  test_run_recovery.py  test_store_smoke.py  test_task_detail_panel.py  test_task_store.py  test_tui_config.py  test_tui_detail.py  test_tui_submit.py  test_worker_loop.py  test_workers.py  test_worktree_manager.py
(+23 files in other folders)
